--- a/sass/design_tablet.css
+++ b/sass/design_tablet.css
@@ -41,6 +41,10 @@
     height: 20rem !important;
     margin-left: 1rem !important;
   }
+  .fas.fa-arrow-left {
+    top: 1.2rem;
+    font-size: 2rem;
+  }
   .mrg_card_left {
     padding-bottom: 0.5rem !important;
   }
