--- a/css/design_desktop.css
+++ b/css/design_desktop.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
 @media screen and (min-width: 1024px) {
-  html, body {
-    padding: 0  !important;
+  html,
+  body {
+    padding: 0 !important;
     margin: 0 !important;
     height: 100vh;
   }
