--- a/css/design_desktop.scss
+++ b/css/design_desktop.scss
@@ -1,12 +1,36 @@
 @import "../sass/variables";
+
+@media screen and (min-width: 1024px) and (max-width: 1090px){
+  .heart_menu {
+  position: absolute !important;
+    right: -17rem !important;
+  }
+    }
 @media screen and (min-width: 1024px) {
+
   html,
   body {
     padding: 0 !important;
     margin: 0 !important;
     height: 100vh;
   }
+  .position_ {
+    &française {
+      background-position-y: -20rem !important;
+    }
+    &française {
+      background-position-y: -20rem !important;
+    }
+    &gout {
+      background-position-y: -15rem !important;
+    }
+    &delice{
+      background-position-y: -20rem !important;
+    
+    }
 
+  
+    }
   .footer {
     position: relative;
     background-color: $dark-grey;
@@ -24,6 +48,9 @@
     width: 20rem !important;
     height: 4.5rem;
     border-radius: 20px;
+    &_provence {
+      width: 20rem !important;
+    }
   }
 
   .menu_card1 {
@@ -96,10 +123,11 @@
     margin-top: 13.5rem;
     flex-direction: column;
     background-color: white;
-    align-items: flex-start !important;
+    align-items: center !important;
     justify-content: flex-start !important;
     margin: unset;
     padding-top: 3.5rem;
+    margin-left: 4rem;
   }
 
   .reservation_container {
@@ -148,8 +176,24 @@
   }
 
   .card {
+    position: relative;
     height: 15rem !important;
   }
+
+  .heart {
+    position: absolute;
+    font-size: 1.8rem;
+    margin-left: 83%;
+    margin-top: 0%;
+    width: fit-content;
+    &_menu {
+      position: absolute;
+     right: -19rem;
+    
+    }
+  }
+
+  
   .new {
     align-items: center;
     width: 5.5rem;
@@ -181,7 +225,6 @@
   }
 
   .img_menu {
-    height: 20rem !important;
     max-width: 1280px !important;
     margin: auto !important;
   }
@@ -212,6 +255,7 @@
     white-space: nowrap;
   }
   .card_container {
+    position: relative;
     align-items: center !important;
     max-width: 1280px !important;
     margin: auto !important;
@@ -261,4 +305,10 @@
   .card {
     width: 100% !important;
   }
+
+  .loading_spinner {
+    left: 50vw !important;
+ 
+}
+  
 }
