--- a/sass/design_tablet.scss
+++ b/sass/design_tablet.scss
@@ -1,12 +1,20 @@
-@media screen and (min-width: 600px) and (max-width: 900px) {
+@media screen and (min-width: 600px) and (max-width: 1023px) {
 
-
+.heart_menu {
+top: 0.5rem;
+  right: -10rem;
+}
 .card_container {
         align-items: center !important;
     }
 
+    .fonctionnement {
+        align-items: center !important;
+      }
+.footer_mrg_top {
 
-
+  margin-top: 1.4rem !important;
+}
 .loading_spinner {
 
     left: 45vw;
@@ -41,22 +49,27 @@
 
 
 .card {
+    position: relative;
     width: 33.5rem !important;
     height: 20rem !important;
     margin-left: 1rem !important; 
   }
+
+  a {
+
+    width: 33.5rem !important;
+  }
+
 
   .fas.fa-arrow-left {
 top: 1.2rem;
 font-size: 2rem;
   }
   .mrg_card_left {
-
     padding-bottom: 0.5rem !important;
   }
   .new {
-
-    left: 10%; 
+    right: 2rem;
     width: 18%;
    }
 
