--- a/sass/main.css
+++ b/sass/main.css
@@ -104,7 +104,6 @@ a {
 .reservation_container {
   -webkit-animation: visible 3s ease-in forwards;
           animation: visible 3s ease-in forwards;
-  gap: 12rem;
 }
 
 .flex {
@@ -172,8 +171,9 @@ a {
 .fonctionnement_rectangle {
   background-color: #f2f2f2;
   width: 100%;
-  height: 5rem;
   border-radius: 20px;
+  height: 5rem;
+  max-width: 23.5rem;
 }
 
 .container {
@@ -229,12 +229,14 @@ a {
 }
 
 .card {
+  position: relative;
   width: 100% !important;
   height: 67vw !important;
   border-radius: 1.3rem;
   background-color: white;
   -webkit-box-shadow: 0px 0px 7px 3px #e0dfdf;
           box-shadow: 0px 0px 7px 3px #e0dfdf;
+  max-height: 20rem;
 }
 
 .card_container {
@@ -307,6 +309,7 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  max-width: 492px;
   -webkit-animation: test 1s ease-in forwards;
           animation: test 1s ease-in forwards;
 }
@@ -342,6 +345,7 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  max-width: 492px;
   -webkit-animation: test 1.1s ease-in forwards;
           animation: test 1.1s ease-in forwards;
 }
@@ -377,6 +381,7 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  max-width: 492px;
   -webkit-animation: test 1.2s ease-in forwards;
           animation: test 1.2s ease-in forwards;
 }
@@ -412,6 +417,7 @@ a {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  max-width: 492px;
   -webkit-animation: test 1.3s ease-in forwards;
           animation: test 1.3s ease-in forwards;
 }
@@ -596,19 +602,39 @@ a {
   background-image: url(/images/restaurants/delice.jpg);
 }
 
-.far.fa-heart {
+.heart {
   position: absolute;
   font-size: 1.8rem;
-  margin-left: 77%;
-  margin-top: -10.5%;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
+  right: 3rem;
+  top: 77%;
+}
+
+.filled {
+  opacity: 0;
+  fill: url(#MyGradient);
+}
+
+.heart:hover .filled {
+  opacity: 1;
+  z-index: 6;
+}
+
+svg {
+  cursor: pointer;
+  -webkit-transition: 0.1s;
+  transition: 0.1s;
+  position: absolute;
 }
 
 .heart_menu {
-  margin-left: 79% !important;
-  margin-top: -0% !important;
+  position: absolute;
+  display: inline-block;
+  right: -7rem;
+  top: 0;
+}
+
+h2 {
+  position: relative;
 }
 
 .logo {
@@ -636,13 +662,13 @@ a {
 .new {
   position: absolute;
   width: 23%;
-  height: 4%;
+  height: 3rem;
   background-color: #99e2d0;
   border-radius: 0.2rem;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-left: 65%;
+  right: 2rem;
   margin-top: 3.5%;
   color: #29927a;
 }
@@ -687,6 +713,24 @@ a {
   background-size: 100%;
   background-position-y: 15%;
   background-repeat: no-repeat;
+  height: 24rem;
+  margin-bottom: auto;
+}
+
+.position_française {
+  background-position-y: unset !important;
+}
+
+.position_delice {
+  background-position-y: unset !important;
+}
+
+.position_gout {
+  background-position-y: unset !important;
+}
+
+.position_note {
+  background-position-y: unset !important;
 }
 
 .mrg_img_menu {
@@ -706,9 +750,9 @@ a {
 }
 
 .menu {
-  position: relative;
+  position: relative !important;
   border-radius: 2rem 2rem 0rem 0rem;
-  margin-top: -14%;
+  margin-top: -11.5rem;
   z-index: 4;
   padding-bottom: 25%;
 }
@@ -821,6 +865,7 @@ a {
 }
 
 .img_menu_container {
+  position: relative;
   width: 100% !important;
   height: -webkit-fit-content;
   height: -moz-fit-content;
@@ -1008,5 +1053,34 @@ body {
   border-radius: 4rem;
   -webkit-animation: spin 1s linear infinite;
           animation: spin 1s linear infinite;
+}
+
+@media screen and (min-width: 517px) and (max-width: 599.5px) {
+  .card {
+    max-width: 30.5rem;
+  }
+  .index_card {
+    max-width: 30.5rem;
+  }
+  .card_container {
+    position: relative !important;
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
+    -webkit-box-pack: center !important;
+        -ms-flex-pack: center !important;
+            justify-content: center !important;
+  }
+  .new {
+    max-width: 7.5rem;
+  }
+  .mrg_card_top {
+    margin-top: -4%;
+  }
+  .fonctionnement {
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
+  }
 }
 /*# sourceMappingURL=main.css.map */
