--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,6 +16,8 @@ h4 {
   z-index: 1;
 }
 
+
+
 .bonjour {
   position: relative;
   z-index: 6 !important;
@@ -86,7 +88,6 @@ a {
 
 .reservation_container {
   animation: visible 3s ease-in forwards;
-  gap: 12rem;
 }
 
 .flex {
@@ -128,8 +129,9 @@ a {
   &_rectangle {
     background-color: $light-grey;
     width: 100%;
-    height: 5rem;
     border-radius: 20px;
+    height: 5rem;
+    max-width: 23.5rem;
   }
 }
 
@@ -183,11 +185,13 @@ a {
 }
 
 .card {
+  position: relative;
   width: 100% !important;
   height: 67vw !important;
   border-radius: 1.3rem;
   background-color: $white;
   box-shadow: 0px 0px 7px 3px $grey-box;
+  max-height: 20rem;
 }
 
 .card_container {
@@ -229,6 +233,7 @@ a {
 }
 .menu_card {
   @include menu_card;
+  max-width: 492px;
   animation: test 1s ease-in forwards;
 
   &:hover .slidegreen {
@@ -242,6 +247,7 @@ a {
 
   &1 {
     @include menu_card;
+    max-width: 492px;
     animation: test 1.1s ease-in forwards;
 
     &:hover .slidegreen {
@@ -255,6 +261,7 @@ a {
   }
   &2 {
     @include menu_card;
+    max-width: 492px;
     animation: test 1.2s ease-in forwards;
 
     &:hover .slidegreen {
@@ -268,6 +275,7 @@ a {
   }
   &3 {
     @include menu_card;
+    max-width: 492px;
     animation: test 1.3s ease-in forwards;
 
     &:hover .slidegreen {
@@ -425,17 +433,43 @@ a {
   background-image: url(/images/restaurants/delice.jpg);
 }
 
-.far.fa-heart {
+
+
+.heart {
   position: absolute;
   font-size: 1.8rem;
-  margin-left: 77%;
-  margin-top: -10.5%;
-  width: fit-content;
+  right: 3rem;
+  top: 77%;
+}
+
+.filled {
+  opacity: 0;
+  fill: url(#MyGradient);
+}
+
+.heart:hover .filled {
+  opacity: 1;
+ z-index: 6;
+}
+
+
+svg {
+  cursor: pointer;
+  transition: 0.1s;
+  position: absolute;
+ 
 }
 
 .heart_menu {
-  margin-left: 79% !important;
-  margin-top: -0% !important;
+  position: absolute;
+  display: inline-block;
+ right: -7rem;
+ top: 0;
+
+}
+
+h2 {
+  position: relative;
 }
 
 .logo {
@@ -459,11 +493,11 @@ a {
 .new {
   position: absolute;
   width: 23%;
-  height: 4%;
+  height: 3rem;
   background-color: $green;
   border-radius: 0.2rem;
   justify-content: center;
-  margin-left: 65%;
+ right: 2rem;
   margin-top: 3.5%;
   color: $dark-green;
 }
@@ -505,7 +539,30 @@ a {
 background-size: 100%;
 background-position-y: 15% ;
 background-repeat: no-repeat;
+height: 24rem;
+margin-bottom: auto;
 }
+
+.position_ {
+
+  &française {
+    background-position-y: unset !important;
+
+  }
+  &delice {
+    background-position-y: unset !important;
+
+  }
+  &gout {
+    background-position-y: unset !important;
+
+  }
+  &note {
+    background-position-y: unset !important;
+
+  }
+
+} 
 
 .mrg_img_menu {
   margin-top: -26%;
@@ -523,9 +580,9 @@ background-repeat: no-repeat;
 }
 
 .menu {
-  position: relative;
+  position: relative !important;
   border-radius: 2rem 2rem 0rem 0rem;
-  margin-top: -14%;
+  margin-top: -11.5rem;
   z-index: 4;
   padding-bottom: 25%;
 }
@@ -607,6 +664,7 @@ background-repeat: no-repeat;
 }
 
 .img_menu_container {
+  position: relative;
   width: 100% !important;
   height: fit-content;
   background-color: black !important;
@@ -723,4 +781,28 @@ body {
   }
 
 }
+
+@media screen and (min-width: 517px) and (max-width: 599.5px) {
+  .card {
+    max-width: 30.5rem;
+  }
+  .index_card {
+    max-width: 30.5rem;
+  }
+  .card_container {
+    position: relative !important;
+  align-items: center !important;
+  justify-content: center !important;
+  }
+  .new {
+    max-width: 7.5rem;
+  }
+  .mrg_card_top {
+
+    margin-top: -4%;
+  }
+  .fonctionnement {
+    align-items: center !important;
+  }
+  }
 /*# sourceMappingURL=design.css.map */
