--- a/sass/design_tablet.css
+++ b/sass/design_tablet.css
@@ -31,6 +31,9 @@
   .menu_card3 {
     width: 70% !important;
   }
+  .menu_card_provence {
+    width: 70% !important;
+  }
   .menu_container {
     -webkit-box-align: center;
         -ms-flex-align: center;
