--- a/sass/design_tablet.scss
+++ b/sass/design_tablet.scss
@@ -32,6 +32,10 @@ top: 0.5rem;
  width: 70% !important;
 }
 
+.menu_card_provence {
+  width: 70% !important;
+}
+
 .menu_container {
     align-items: center;
 }
