--- a/css/design_desktop.scss
+++ b/css/design_desktop.scss
@@ -1,11 +1,19 @@
 @import "../sass/variables";
 
-@media screen and (min-width: 1024px) and (max-width: 1090px){
+@media screen and (min-width: 1024px) and (max-width: 1130px){
   .heart_menu {
   position: absolute !important;
-    right: -17rem !important;
+    right: -13rem !important;
   }
     }
+
+    @media screen and (min-width: 1131px)  and (max-width: 1220px) {
+      .heart_menu {
+      position: absolute !important;
+        right: -17rem !important;
+      }
+        } 
+        
 @media screen and (min-width: 1024px) {
 
   html,
