--- a/sass/main.scss
+++ b/sass/main.scss
@@ -299,6 +299,7 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    max-width: 492px;
 
     &:hover .slidegreen {
       animation: slidetest 0.5s forwards;
@@ -398,7 +399,7 @@ a {
   position: absolute;
   color: $black;
   font-size: 1.1rem;
-  margin-left: -8%;
+  margin-left: -18%;
   margin-top: -0.2%;
 }
 
@@ -463,9 +464,12 @@ svg {
 .heart_menu {
   position: absolute;
   display: inline-block;
- right: -7rem;
+right: -4rem !important;
  top: 0;
 
+}
+.mrg_heart_menu {
+  right: -7rem !important;
 }
 
 h2 {
