--- a/sass/main.scss
+++ b/sass/main.scss
@@ -201,7 +201,7 @@ a {
   gap: 1.5rem;
   align-items: flex-start;
   position: relative;
-  padding: 20% 2.5%;
+  padding: 3rem 2.5%;
   background-color: $light-grey;
 }
 
